WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46904
The backreference checking isn't working in some cases with YARR Interpreter
https://bugs.webkit.org/show_bug.cgi?id=46904
Summary
The backreference checking isn't working in some cases with YARR Interpreter
Peter Varga
Reported
2010-09-30 08:38:24 PDT
The YARR Interpreter doesn't handle the case when a backreference points to the same parentheses where it is. Therefore the YARR Interpreter causes assertion in debug mode and a regression in a JSC test. Eg.: "a".match(/(a\1)/; result: , expected: a,a
Attachments
proposed patch
(2.00 KB, patch)
2010-09-30 08:45 PDT
,
Peter Varga
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Varga
Comment 1
2010-09-30 08:45:11 PDT
Created
attachment 69338
[details]
proposed patch
Gavin Barraclough
Comment 2
2010-10-14 10:41:05 PDT
Comment on
attachment 69338
[details]
proposed patch Nice fix, thank you!
WebKit Commit Bot
Comment 3
2010-10-14 11:01:12 PDT
Comment on
attachment 69338
[details]
proposed patch Clearing flags on attachment: 69338 Committed
r69781
: <
http://trac.webkit.org/changeset/69781
>
WebKit Commit Bot
Comment 4
2010-10-14 11:01:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug