2010-10-14  Peter Varga  <pvarga@inf.u-szeged.hu>

Reviewed by Gavin Barraclough.

        The backreference checking isn't working in some cases with YARR Interpreter
        https://bugs.webkit.org/show_bug.cgi?id=46904

        The Interpreter::matchBackReference() function returns true without matching
        when a backreference points to the same parentheses where it is.

        * yarr/RegexInterpreter.cpp:
        (JSC::Yarr::Interpreter::matchBackReference):

Canonical link: https://commits.webkit.org/60368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69781 268f45cc-cd09-0410-ab3c-d52691b4dbfc